--- a/Technotheek.net Core/Views/Home/UserPage.cshtml
+++ b/Technotheek.net Core/Views/Home/UserPage.cshtml
@@ -3,19 +3,43 @@
     ViewData["Title"] = "User";
 }
 
-<h1>User</h1>
+@{
+    var currentUser = ViewBag.User as TechnotheekWeb.Models.User;
+}
 
-<div>
-    <div class="mt-2">
-        <h4>Full name</h4>
-        <span>@ViewBag.FirstName @ViewBag.LastName</span>
-    </div>
-    <div class="mt-2">
-        <h4>Username</h4>
-        <span>@ViewBag.Email</span>
-    </div>
-    <div class="mt-2">
-        <h4>Adress</h4>
-        <span>@ViewBag.Street @ViewBag.StreetNmr</span>
-    </div>
+<h1>User</h1>
+<div class="author-card-avatar">
+    @if (ViewBag.Picture == "")
+    {
+        <img src="~/ProfilePictures/DefaultPicture.png" />
+    }
+    else
+    {
+        <img src="~/ProfilePictures/@ViewBag.Picture">
+    }
 </div>
+
+    <partial name="_UserPicture" />
+
+    <div>
+        <div class="mt-2">
+            <h4>Full name</h4>
+            <span>@currentUser.FirstName @currentUser.LastName</span>
+        </div>
+        <div class="mt-2">
+            <h4>Username</h4>
+            <span>@currentUser.Username</span>
+        </div>
+        <div class="mt-2">
+            <h4>Adress</h4>
+            <span>@currentUser.Street @currentUser.StreetNmr</span>
+        </div>
+        <div class="mt-2">
+            <h4>City</h4>
+            <span>@currentUser.City</span>
+        </div>
+        <div class="mt-2">
+            <h4>Phone Number</h4>
+            <span>@currentUser.Contact</span>
+        </div>
+    </div>
