--- a/Technotheek.net Core/Views/Home/skuskui.cshtml
+++ b/Technotheek.net Core/Views/Home/skuskui.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿@*@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -9,4 +9,4 @@
 </div>
 
 
-<partial name="_LoginPartial" />
+<partial name="_LoginPartial" />*@
