--- a/Technotheek.net Core/Views/Shared/_Layout.cshtml
+++ b/Technotheek.net Core/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
 ﻿
+@{
+    var currentUser = ViewBag.User as TechnotheekWeb.Models.User;
+}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,11 +10,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Technotheek</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-Lumen.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/Bootstrap-Darkly.css" />
+
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    @{ if (ViewBag.ID != null)
+    @{ if (ViewBag.User != null)
         {
             <header>
                 <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
@@ -23,43 +28,50 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                            <ul class="navbar-nav flex-grow-1">
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Playlist">Playlists</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UserPage">Account</a>
-                                </li>
-                            </ul>
+                            @if (currentUser.FunctionType == "Admin")
+                            {
+
+                            }
+                            else
+                            {
+                                <ul class="navbar-nav flex-grow-1">
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Playlist">Playlists</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UserPage">Account</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Customer">Discover</a>
+                                    </li>
+                                </ul>
+                            }
                         </div>
                     </div>
                 </nav>
             </header>
-            }
-        }
+}
+    }
 
+    <div class="container">
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
+    </div>
+
+    @*<footer class="border-top footer text-muted">
             <div class="container">
-                <main role="main" class="pb-3">
-                    @RenderBody()
-                </main>
+                &copy; 2020 - Technotheek - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
+        </footer>*@
 
-            <footer class="border-top footer text-muted">
-                <div class="container">
-                    &copy; 2020 - Technotheek - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                </div>
-            </footer>
-            <script src="~/lib/jquery/dist/jquery.min.js"></script>
-            <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-            <script src="~/js/site.js" asp-append-version="true"></script>
-            @RenderSection("Scripts", required: false)
-        </body>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
+</body>
 </html>
 
-  
