De code een beetje omgegooid zodat het duidelijker in elkaar zit, een bug gefixt en de layout mooier gemaakt op een aantal plekken

--- a/Technotheek.net Core/Views/Account/Register.cshtml
+++ b/Technotheek.net Core/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model TechnotheekWeb.Models.User
+
 @{
     ViewBag.Title = "Register";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -18,40 +19,49 @@
                         <div><small id="Error" name="ErrorRegistration" class="form-text text-muted"></small></div>
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" name="Email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <input asp-for="Username" type="email" wclass="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <span asp-validation-for="Username"></span>
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Password</label>
-                            <input type="password" name="Password" class="form-control" id="exampleInputPassword1">
+                            <input asp-for="Password" type="password" class="form-control" id="exampleInputPassword1">
+                            <span asp-validation-for="Password"></span>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Repeat password</label>
-                            <input type="password" name="RepeatPassword" class="form-control" id="exampleInputPassword1">
+                            <input asp-for="ComparePassword" type="password" class="form-control" id="exampleInputPassword1">
+                            <span asp-validation-for="ComparePassword"></span>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">First name</label>
-                            <input type="text" name="FirstName" class="form-control" id="exampleInputPassword1">
+                            <input asp-for="FirstName" type="text" class="form-control" id="exampleInputPassword1">
+                            <span asp-validation-for="FirstName"></span>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Last name</label>
-                            <input type="text" name="LastName" class="form-control" id="exampleInputPassword1">
+                            <input asp-for="LastName" type="text" class="form-control" id="exampleInputPassword1">
+                            <span asp-validation-for="LastName"></span>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">City</label>
-                            <input type="text" name="City" class="form-control" id="exampleInputPassword1">
+                            <input asp-for="City" type="text"class="form-control" id="exampleInputPassword1">
+                            <span asp-validation-for="City"></span>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Street</label>
-                            <input type="text" name="Street" class="form-control" id="exampleInputPassword1">
+                            <input asp-for="Street" type="text" class="form-control" id="exampleInputPassword1">
+                            <span asp-validation-for="Street"></span>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Street number</label>
-                            <input type="number" name="StreetNumber" class="form-control" id="exampleInputPassword1">
+                            <input asp-for="StreetNmr" type="number" n class="form-control" id="exampleInputPassword1">
+                            <span asp-validation-for="StreetNmr"></span>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Phone number</label>
-                            <input type="number" name="PhoneNumber" class="form-control" id="exampleInputPassword1">
+                            <input asp-for="Contact" type="number" class="form-control" id="exampleInputPassword1">
+                            <span asp-validation-for="Contact"></span>
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
