--- a/Technotheek.net Core/Views/Shared/_PlaylistPartial.cshtml
+++ b/Technotheek.net Core/Views/Shared/_PlaylistPartial.cshtml
@@ -2,10 +2,19 @@
     var userPlaylists = ViewBag.Playlists as IEnumerable<Technotheek.net_Core.Models.Playlist>;
 }
 
-<p>
-    <a asp-action="Create">Playlists</a>
-</p>
-<table class="table">
+@{
+    var Playlists = "Playlists";
+}
+<table class="table table-hover table-dark">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => Playlists)
+            </th>
+
+            <th></th>
+        </tr>
+    </thead>
     <tbody>
         @foreach (var item in userPlaylists)
         {
@@ -15,7 +24,7 @@
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Open", "Open", "Customer", new { selectedPlaylist = item.Name }) |
                     @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
                 </td>
             </tr>
