--- a/Technotheek.net Core/Views/Home/UserPage.cshtml
+++ b/Technotheek.net Core/Views/Home/UserPage.cshtml
@@ -7,39 +7,128 @@
     var currentUser = ViewBag.User as TechnotheekWeb.Models.User;
 }
 
-<h1>User</h1>
-<div class="author-card-avatar">
-    @if (ViewBag.Picture == "")
-    {
-        <img src="~/ProfilePictures/DefaultPicture.png" />
-    }
-    else
-    {
-        <img src="~/ProfilePictures/@ViewBag.Picture">
-    }
-</div>
-
-    <partial name="_UserPicture" />
-
-    <div>
-        <div class="mt-2">
-            <h4>Full name</h4>
-            <span>@currentUser.FirstName @currentUser.LastName</span>
+<div class="container">
+    <h1 class="pb-5">Account information</h1>
+    <div class="row">
+        <div class="col-lg-4 pb-5">
+            <!-- Account Sidebar-->
+            <div class="author-card pb-3">
+                <div class="author-card-profile">
+                    <div class="author-card-avatar">
+                        @if (ViewBag.Picture == "")
+                        {
+                            <img style="width: 100px;height:100px;" class="media-object dp img-circle" src="~/ProfilePictures/DefaultPicture.png" />
+                        }
+                        else
+                        {
+                            <img style="width: 100px;height:100px;" class="media-object dp img-circle" src="~/ProfilePictures/@ViewBag.Picture">
+                        }
+                    </div>
+                    <div class="author-card-details">
+                        <h5 class="author-card-name text-lg">@currentUser.FirstName @currentUser.LastName</h5>
+                        <partial name="_UserPicture" /> 
+                        <button type="submit" id="open" class="btn btn-primary">Change profile picture</button>
+                    </div>
+                </div>
+            </div>
+            <div id="userPicturePartial"></div>
         </div>
-        <div class="mt-2">
-            <h4>Username</h4>
-            <span>@currentUser.Username</span>
-        </div>
-        <div class="mt-2">
-            <h4>Adress</h4>
-            <span>@currentUser.Street @currentUser.StreetNmr</span>
-        </div>
-        <div class="mt-2">
-            <h4>City</h4>
-            <span>@currentUser.City</span>
-        </div>
-        <div class="mt-2">
-            <h4>Phone Number</h4>
-            <span>@currentUser.Contact</span>
+        <!-- Profile Settings-->
+        <div class="col-lg-8 pb-5">
+            <form class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="account-fn">First Name</label>
+                        <input class="form-control" type="text" id="account-fn" value="@currentUser.FirstName" required="" disabled="">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="account-ln">Last Name</label>
+                        <input class="form-control" type="text" id="account-ln" value="@currentUser.LastName" required="" disabled="">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="account-email">E-mail Address</label>
+                        <input class="form-control" type="email" id="account-email" value="@currentUser.Username" disabled="">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="account-phone">Phone number</label>
+                        <input class="form-control" type="text" id="account-phone" value="@currentUser.Contact" required="" disabled="">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="account-phone">Adress</label>
+                        <input class="form-control" type="text" id="account-phone" value="@currentUser.Street  @currentUser.StreetNmr" required="" disabled="">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="account-phone">City</label>
+                        <input class="form-control" type="text" id="account-phone" value="@currentUser.City" required="" disabled="">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="account-pass">New Password</label>
+                        <input class="form-control" type="password" id="account-pass">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="account-confirm-pass">Confirm Password</label>
+                        <input class="form-control" type="password" id="account-confirm-pass">
+                    </div>
+                </div>
+                <div class="col-12">
+                    <hr class="mt-2 mb-3">
+                    <div class="d-flex flex-wrap justify-content-between align-items-center">
+                        <button class="btn btn-style-1 fontys-professionals text-white" type="button" data-toast="" data-toast-position="topRight" data-toast-type="success" data-toast-icon="fe-icon-check-circle" data-toast-title="Success!" data-toast-message="Your password updated successfuly.">Update Password</button>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
+</div>
+
+
+<div class="container">
+    <div class="modal fade" tabindex="-1" id="loginModal"
+         data-keyboard="false" data-backdrop="static">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Create Playlist</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        ×
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <partial name="_UserPicture" />
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="btnHideModal" class="btn btn-primary button button4">
+                        Hide
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript">
+
+    $("#open").click(function () {
+        $("#loginModal").modal('show');
+    });
+
+    $("#btnHideModal").click(function () {
+        $("#loginModal").modal('hide');
+    });
+</script>
