--- a/Technotheek.net Core/Views/Shared/_UserPicture.cshtml
+++ b/Technotheek.net Core/Views/Shared/_UserPicture.cshtml
@@ -18,7 +18,7 @@
 
         <div class="form-group row">
             <div class="col-sm-10">
-                <button type="submit" class="btn btn-primary">Upload</button>
+                <button type="submit" class="btn btn-primary">Change Profile Picture</button>
             </div>
         </div>
 
