--- a/Technotheek.net Core/wwwroot/css/site.css
+++ b/Technotheek.net Core/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 ﻿ /*Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. 
+for details on configuring this project to bundle and minify static web assets.*/ 
 
 a.navbar-brand {
   white-space: normal;
@@ -76,5 +76,26 @@ body {
     bottom: 0;
     width: 100%;
     white-space: nowrap;
-    line-height: 60px;  Vertically center the text there 
-}*/
+    line-height: 60px; /* Vertically center the text there */
+    min-height: 60px;
+    max-height: 60px;
+}
+
+.media {
+    /*box-shadow:0px 0px 4px -2px #000;*/
+    margin: 20px 0;
+    padding: 30px;
+}
+
+.dp {
+    border: 10px solid #eee;
+    transition: all 0.2s ease-in-out;
+}
+
+    .dp:hover {
+        border: 2px solid #eee;
+        transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        /*-webkit-font-smoothing:antialiased;*/
+    }
