--- a/Technotheek.net Core/Views/Admin/Admin.cshtml
+++ b/Technotheek.net Core/Views/Admin/Admin.cshtml
@@ -5,42 +5,85 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Admin Page</h2>
+<h2>Add new song</h2>
 
 <form enctype="multipart/form-data" asp-controller="Admin" asp-action="Upload"
       method="post" class="mt-3">
-    <div class="form-group row">
-        <div class="col-sm-10">
+    <div class="form-group">
+        <div>
             <div class="custom-file">
                 <input asp-for="Song" class="form-control custom-file-input">
+                <span asp-validation-for="Song"></span>
                 <label class="custom-file-label">Choose File...</label>
             </div>
         </div>
     </div>
-
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label>Name the song:</label>
+            <input type="text" asp-for="Name" class="form-control">
+            <span asp-validation-for="Name"></span>
+            <small class="form-text text-muted"></small>
+        </div>
+        <div class="form-group col-md-6">
+            <label>Artist</label>
+            <input type="text" asp-for="Artist" class="form-control">
+            <span asp-validation-for="Artist"></span>
+            <small class="form-text text-muted"></small>
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label>Genre</label>
+            <input type="text" asp-for="Genre" class="form-control">
+            <span asp-validation-for="Genre"></span>
+            <small class="form-text text-muted"></small>
+        </div>
+        <div class="form-group col-md-6">
+            <label>Album</label>
+            <input type="text" asp-for="Album" class="form-control">
+            <span asp-validation-for="Album"></span>
+            <small class="form-text text-muted"></small>
+        </div>
+    </div>
     <div class="form-group">
-        <label>Name the song:</label>
-        <input type="text" name="SongName" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <small id="emailHelp" class="form-text text-muted"></small>
+        <label>Length</label>
+        <input type="text" asp-for="Length" class="form-control">
+        <span asp-validation-for="Length"></span>
+        <small class="form-text text-muted"></small>
     </div>
 
-    <div asp-validation-summary="All" class="text-danger"></div>
+    @*<div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown button
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Acid Techno</a>
+                <a class="dropdown-item" href="#">Minimal techno</a>
+                <a class="dropdown-item" href="#">Hard Techno</a>
+                <a class="dropdown-item" href="#">Industrial Techno</a>
+                <a class="dropdown-item" href="#">Hard Trance</a>
+                <a class="dropdown-item" href="#">Disco Techno</a>
+                <a class="dropdown-item" href="#">Tekno</a>
+            </div>
+        </div*@
+
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group row">
         <div class="col-sm-10">
             <button type="submit" class="btn btn-primary">Create</button>
         </div>
     </div>
-
-
-    @section Scripts {
-        <script>
-            $(document).ready(function () {
-                $('.custom-file-input').on("change", function () {
-                    var fileName = $(this).val().split("\\").pop();
-                    $(this).next('.custom-file-label').html(fileName);
-                });
-            });
-        </script>
-    }
 </form>
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $('.custom-file-input').on("change", function () {
+                var fileName = $(this).val().split("\\").pop();
+                $(this).next('.custom-file-label').html(fileName);
+            });
+        });
+    </script>
+}
