--- a/Technotheek.net Core/Views/Customer/Discover.cshtml
+++ b/Technotheek.net Core/Views/Customer/Discover.cshtml
@@ -30,31 +30,25 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="account-fn">Song Name</label>
-                            <input class="form-control" asp-for="@songInfo.Name">
+                            <input class="form-control" asp-for="@songInfo.Name" disabled="">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="account-ln">Artist</label>
-                            <input class="form-control"  asp-for="@songInfo.Artist" type="text">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="account-email">Length</label>
-                            <input class="form-control"  asp-for="@songInfo.Name" type="email">
+                            <input class="form-control" asp-for="@songInfo.Artist" type="text" disabled="">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="account-phone">Album</label>
-                            <input class="form-control" asp-for="@songInfo.Album" type="text">
+                            <input class="form-control" asp-for="@songInfo.Album" type="text" disabled="">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
                             <label>Genre</label>
-                            <input class="form-control" asp-for="@songInfo.Genre" type="text">
+                            <input class="form-control" asp-for="@songInfo.Genre" type="text" disabled="">
                         </div>
                     </div>
                 </form>
@@ -81,10 +75,15 @@
             {
                 <tr>
                     <td type="text" name="selectedSong">
-                        <div class="col-sm">
-                            @Html.DisplayFor(modelItem => item.Name)
-                        </div>
-                    </td>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </div>
+                            <div class="form-group">
+                                @Html.DisplayFor(modelItem => item.Artist)
+                            </div>
+                            </div>
+</td>
                     <td>
                         <div class="col-sm">
                             <button type="button" onclick="AddPartial(@item.ID)" class="btn btn-primary">Add to playlist</button>
