--- a/Technotheek.net Core/Views/Admin/Admin.cshtml
+++ b/Technotheek.net Core/Views/Admin/Admin.cshtml
@@ -56,6 +56,8 @@
     </div>
 </form>
 
+@section scripts{
+
     <script>
         $(document).ready(function () {
             $('.custom-file-input').on("change", function () {
@@ -64,3 +66,5 @@
             });
         });
     </script>
+
+}
