Resterende Unit tests gemaakt en ervoor gezorgd dat de applicatie niet crasht wanneer een methode fout gaat.

--- a/Technotheek.net Core/Views/Home/UserPage.cshtml
+++ b/Technotheek.net Core/Views/Home/UserPage.cshtml
@@ -26,9 +26,8 @@
                     </div>
                     <div class="author-card-details">
                         <h5 class="author-card-name text-lg">@currentUser.FirstName @currentUser.LastName</h5>
-                        <partial name="_UserPicture" /> 
-                    <
-/div>
+                        <partial name="_UserPicture" />
+                    </div>
                 </div>
             </div>
             <div id="userPicturePartial"></div>
