--- a/Technotheek.net Core/Views/Customer/Playlist.cshtml
+++ b/Technotheek.net Core/Views/Customer/Playlist.cshtml
@@ -36,10 +36,7 @@
 
 <button type="submit" id="open" class="btn btn-primary">Create new Playlist</button>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-
-
-</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
 
 <script type="text/javascript">
