--- a/Technotheek.net Core/Views/Home/Index.cshtml
+++ b/Technotheek.net Core/Views/Home/Index.cshtml
@@ -23,5 +23,296 @@ else
         <h1 class="display-4">Welcome Back, @currentUser.FirstName</h1>
         <p>This is Technotheek lets get started</p>
     </div>
+
+    <div class="text-center">
+        <button type="submit" id="open" class="btn btn-primary">Modify recommendation settings</button>
+    </div>
 }
 
+<div class="container">
+    <div class="modal fade" tabindex="-1" id="GenreModal"
+         data-keyboard="false" data-backdrop="static">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Choose you're favorites</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        x
+                    </button>
+                </div>
+                <form>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <h5 class="modal-title">Choose you're favorites</h5>
+                            <div id="AddSongToPlaylistPartial"></div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option2">
+                                <label class="form-check-label" for="inlineRadio2">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option2">
+                                <label class="form-check-label" for="inlineRadio2">4</label>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <form>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <h5 class="modal-title">Choose you're favorites</h5>
+                            <div id="AddSongToPlaylistPartial"></div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option3">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+                                <label class="form-check-label" for="inlineRadio3">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option5">
+                                <label class="form-check-label" for="inlineRadio4">4</label>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <form>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <h5 class="modal-title">Choose you're favorites</h5>
+                            <div id="AddSongToPlaylistPartial"></div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option3">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+                                <label class="form-check-label" for="inlineRadio3">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option5">
+                                <label class="form-check-label" for="inlineRadio4">4</label>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <form>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <h5 class="modal-title">Choose you're favorites</h5>
+                            <div id="AddSongToPlaylistPartial"></div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option3">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+                                <label class="form-check-label" for="inlineRadio3">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option5">
+                                <label class="form-check-label" for="inlineRadio4">4</label>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <form>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <h5 class="modal-title">Choose you're favorites</h5>
+                            <div id="AddSongToPlaylistPartial"></div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option3">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+                                <label class="form-check-label" for="inlineRadio3">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option5">
+                                <label class="form-check-label" for="inlineRadio4">4</label>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <form>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <h5 class="modal-title">Choose you're favorites</h5>
+                            <div id="AddSongToPlaylistPartial"></div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option3">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+                                <label class="form-check-label" for="inlineRadio3">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option5">
+                                <label class="form-check-label" for="inlineRadio4">4</label>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <form>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <h5 class="modal-title">Choose you're favorites</h5>
+                            <div id="AddSongToPlaylistPartial"></div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option3">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+                                <label class="form-check-label" for="inlineRadio3">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option5">
+                                <label class="form-check-label" for="inlineRadio4">4</label>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <form>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <h5 class="modal-title">Choose you're favorites</h5>
+                            <div id="AddSongToPlaylistPartial"></div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option3">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+                                <label class="form-check-label" for="inlineRadio3">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option5">
+                                <label class="form-check-label" for="inlineRadio4">4</label>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <form>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <h5 class="modal-title">Choose you're favorites</h5>
+                            <div id="AddSongToPlaylistPartial"></div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option3">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+                                <label class="form-check-label" for="inlineRadio3">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option5">
+                                <label class="form-check-label" for="inlineRadio4">4</label>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <form>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <h5 class="modal-title">Choose you're favorites</h5>
+                            <div id="AddSongToPlaylistPartial"></div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option3">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+                                <label class="form-check-label" for="inlineRadio3">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option5">
+                                <label class="form-check-label" for="inlineRadio4">4</label>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <div class="modal-footer">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+
+<script type="text/javascript">
+
+    $("#open").click(function () {
+        $("#GenreModal").modal('show');
+    });
+
+    $("#GenreNext").click(function () {
+        $("#GenreModal").modal('hide');
+    });
+</script>
+
+<script>
+    function AddPartial(SongID) {
+        $.ajax({
+    type: 'POST',
+    url: "@Url.Action("AddSongPlaylistPartial", "Customer")",
+    data: { SongID: SongID },
+    }).done(function (r) {
+
+    $('#AddSongToPlaylistPartial').html(r);
+    }).fail(function (e) {
+    console.log(e.responseText);
+    });
+
+        }
+</script>
