Een algoritme toegevoegd die werknemers kan verdelen over kamer op basis van functie, werkruimtes en de grootte van de kamers in het gebouw.

--- a/Technotheek.net Core/Views/Admin/Admin.cshtml
+++ b/Technotheek.net Core/Views/Admin/Admin.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <h2>Add new song</h2>
 
 <form enctype="multipart/form-data" asp-controller="Admin" asp-action="Upload"
@@ -56,7 +57,11 @@
     </div>
 </form>
 
+<partial name="_AddEmployeeView"/>
+
 @section scripts{
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
     <script>
         $(document).ready(function () {
@@ -66,5 +71,6 @@
             });
         });
     </script>
+
 
 }
