--- a/Technotheek.net Core/Views/Customer/Discover.cshtml
+++ b/Technotheek.net Core/Views/Customer/Discover.cshtml
@@ -82,8 +82,8 @@
                             <div class="form-group">
                                 @Html.DisplayFor(modelItem => item.Artist)
                             </div>
-                            </div>
-</td>
+                        </div>
+                    </td>
                     <td>
                         <div class="col-sm">
                             <button type="button" onclick="AddPartial(@item.ID)" class="btn btn-primary">Add to playlist</button>
@@ -127,30 +127,9 @@
 
 @section scripts{
 
-    <script>
-        $(document).ready(function () {
-            $("#filter").keyup(function () {
-
-                var filter = $(this).val(), count = 0;
-
-                $("tbody tr").each(function () {
-
-                    if ($(this).text().search(new RegExp(filter, "i")) < 0) {
-                        $(this).fadeOut();
-
-                    } else {
-                        $(this).show();
-                        count++;
-                    }
-                });
-
-                var numberItems = count;
-                $("#filter-count").text("Number of Songs = " + count);
-            });
-        });
-    </script>
-
     <script src="bootstrap/js/bootstrap.min.js"></script>
+
+    <script src="~/js/Discover.js"></script>
 
     <script type="text/javascript">
 
@@ -164,7 +143,8 @@
 
     </script>
 
-<script>
+    <script>
+
     function AddPartial(SongID) {
         $.ajax({
     type: 'POST',
@@ -177,8 +157,18 @@
     console.log(e.responseText);
     });
 
-        }
-</script>
+    }
+
+    </script>
+
+    @if (ViewBag.SuccesOrNot != null)
+    {
+        <script type="text/javascript">
+    window.onload = function () {
+        alert("@ViewBag.SuccesOrNot")
+    };
+        </script>
+    }
 }
 
 
