--- a/Technotheek.net Core/Views/Shared/_UserPicture.cshtml
+++ b/Technotheek.net Core/Views/Shared/_UserPicture.cshtml
@@ -21,11 +21,13 @@
             <button type="submit" class="btn btn-primary">Change Profile Picture</button>
         </div>
     </div>
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </form>
 
-@section Scripts {
+
+@section scripts{
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
     <script>
         $(document).ready(function () {
             $('.custom-file-input').on("change", function () {
